Step1 of refactoring